localization app done

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -12,12 +12,24 @@
         "title": "العنوان",
         "content": "المحتوي",
         "search": "بحث",
+        "alert": "!تحذير",
+        "ok": "موافق",
+        "cancel": "رجوع",
+        "name": "يوسف محمد",
+        "phone": "رقم الهاتف  : ",
+        "jop": "مهندس برمجيات",
+        "email": "البريد الالكتروني  : ",
         "emptyName": "اسم فارغ",
-        "deleteMessage": "هل تريد ان تحذف هذا؟",
+        "deleteMessage": "هل تريد حذف هذا ؟",
         "selectimageSuccess": "تم اختيار الصورة",
         "selectimageFailure": "فشل تحديد الصورة",
         "selectbookSuccess": "تم اختيار الكتاب",
         "selectiBookFailure": "فشل تحديد الكتاب",
         "editSuccess": " تم التعديل بنجاح",
-        "addSuccess": "تمت الاضافة بنجاح"
+        "addSuccess": "تمت الاضافة بنجاح",
+        "usSelectedBook": "يجب تحديد كتاب",
+        "usSelectedImage": "يجب تحديد صورة",
+        "language": "اللغة",
+        "ar": "العربية",
+        "en": "الانجليزية"
 }
