--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -12,6 +12,13 @@
         "title": "Title",
         "content": "Content",
         "search": "Search",
+        "alert": "Alert",
+        "ok": "Ok",
+        "cancel": "Cancel",
+        "name": "Yousef Mohamed",
+        "phone": "Phone Number  : ",
+        "jop": "Software Engineer",
+        "email": "Email Address  : ",
         "emptyName": "Empty Name",
         "deleteMessage": "Do you want to delete this?",
         "selectimageSuccess": "select Picture Success",
@@ -19,6 +26,10 @@
         "selectbookSuccess": "select Book Success",
         "selectiBookFailure": "select Book Failure",
         "editSuccess": "Edit Success",
-        "addSuccess": "Add Success"
-        
+        "addSuccess": "Add Success",
+        "usSelectedBook": "Plesae select Book",
+        "usSelectedImage": "Plesae select picture",
+        "language": "Language",
+        "ar": "Arabic",
+        "en": "English"
 }
